# hotspotconf-tool

./: CMakeLists.txt
source/: main.c
